# SMA_zoomcamp

./: documentation_plan.md  homework1.ipynb  main.py  module1.md  pyproject.toml  reame.md
docs/: COMMUNITY_SUPPORT.md  GETTING_STARTED.md  MODULE_01.md  MODULE_02.md  MODULE_03.md  MODULE_04.md  MODULE_05.md  PROJECT.md  README.md  SYLLABUS.md
kode_versi_indo/: [2025]_Module_01_Colab_Introduction_and_Data_Sources.ipynb
personal_notes/: module_1.md
