[project]
name = "sma-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "distlib>=0.3.9",
    "ipykernel>=6.29.5",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "plotly>=6.1.2",
    "pytest>=8.3.5",
    "setuptools>=80.9.0",
    "yfinance>=0.2.61",
]
